# shitposter

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile.migrate  Dockerfile.web  Dockerfile.worker  Dockerfile.worker.dev  README.md  docker-compose.dev.yml  docker-compose.dokploy.yml  docker-compose.yml  drizzle.config.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_existing_schema.py  0002_add_api_keys.py  0003_add_ai_provider_credentials.py  0004_add_tiktok_oauth_support.py  0005_add_video_generation_job.py  0006_add_video_recipes.py  0007_add_post_target_dispatch_token.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/shitposter_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_agent_api.py  test_agent_readiness.py  test_ai_routes.py  test_ai_service.py  test_api_keys.py  test_billing_webhook.py  test_crypto.py  test_dashboard_posts_mutations.py  test_health.py  test_instagram.py  test_media_upload.py  test_models.py  test_oauth1.py  test_protected_routes.py  test_public_api_ai.py  test_public_api_auth.py  test_public_api_capabilities.py  test_public_api_posts.py  test_public_api_rate_limit.py  test_recipe_service.py  test_security.py  test_storage.py  test_tiktok.py  test_video_replicate.py  test_worker_cancellation_guard.py  test_worker_jobs.py  test_worker_status_reconcile.py  test_worker_twitter_url_fallback.py
(+228 files in other folders)
